# SDX123321.github.io

./: .dockerignore  .env.production.example  .gitignore  .redocly.yaml  CHANGELOG.md  CLAUDE.md  CNAME  Dockerfile.api  Dockerfile.web  README.md  docker-compose.yml  eslint.config.js  exam.js  index.css  index.html  index.js  index.md  manifest.json  mastery.js  os_exercises_raw.json  package-lock.json  package.json  pnpm-lock.yaml  preview.js  print-mode.js  remember.js  search.js  search_index.json  start-dev.ps1  stats.js  sw.js  theme.css  theme.js  tsconfig.json  turnstile-worker.js  ux.js  vite.config.js  vitest.config.js  wrangler.toml
.github/: dependabot.yml
deploy/: api-entrypoint.sh  nginx.conf  prometheus.yml
docs/: P0-security-fixes.md  engineering-delivery-evidence.md  gaokao-cleanup-audit.md  high-school-rag.md  langchain-langgraph-plan.md  performance-report.md  production-deployment.md
files/: exam-schedule-data.js  exam-schedule.json
legacy-js/: cross-links.js  formula-ref.js  index.js  pwa.js  random-quiz.js  wrong-book.js
perf/: k6-smoke.js
public/: 404.html  CNAME  manifest.json  robots.txt  sitemap.xml  sw.js
scripts/: audit-gaokao-source.mjs  build-exam-json.mjs  build-gaokao-answer-overrides.py  build-gaokao-index.mjs  build-gaokao-web-answer-sources.py  export-gaokao-langsmith-jsonl.mjs  extract-content.mjs  extract-gaokao-audit-docx.py  extract-gaokao-docx.py  extract-gaokao-pdf-text.py  extract-gaokao-question-images.mjs  extract-gaokao-residuals.py  index-high-school-materials.mjs  index-materials.mjs  ocr-gaokao-audit-files.py  ocr-gaokao-pdf.py  perf-benchmark.mjs  perf-smoke.mjs  site.conf  update-gaokao-question-assets.mjs  upload-dsp.cjs  upload-r2.py  vps-https-setup.sh  vps-nginx-setup.sh  vps-setup.sh  web-knowledge-research.mjs
server/: db.js  (+3 more)
server-rs/: Cargo.toml  README.md  openapi.yaml
server-rs/data/: chinese-knowledge-graph-v1.json  english-knowledge-graph-v1.json  math-knowledge-graph-v1.json
server-rs/migrations/: 202607120001_delivery_baseline.sql  202607170001_visitor_api_keys.sql
server-rs/src/: admin.rs  high_school.rs  indexer.rs  knowledge.rs  learning.rs  main.rs
(+256 files in other folders)
